[project]
name = "geodock-local"
version = "0.1.0"
description = "Local GeoDock environment setup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.0.0",
    "py3Dmol>=2.0.0",
    "geodock>=0.1.0",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
    "biotite==1.2.0",
]

[build-system]
requires = ["torch", "torch-geometric"]

[tool.uv.sources]
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.8.0+cu128/torch_scatter-2.1.2%2Bpt28cu128-cp312-cp312-linux_x86_64.whl" }
torch-sparse = { url = "https://data.pyg.org/whl/torch-2.8.0+cu128/torch_sparse-0.6.18%2Bpt28cu128-cp312-cp312-linux_x86_64.whl" }
torch-cluster = { url = "https://data.pyg.org/whl/torch-2.8.0+cu128/torch_cluster-1.6.3%2Bpt28cu128-cp312-cp312-linux_x86_64.whl" }
torch-spline-conv = { url = "https://data.pyg.org/whl/torch-2.8.0+cu128/torch_spline_conv-1.2.2%2Bpt28cu128-cp312-cp312-linux_x86_64.whl" }
